raw_measurements are not included

--- a/notebooks/00_data_aquisition.ipynb
+++ b/notebooks/00_data_aquisition.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook documents the data aquisistion. Results are gathered in `measurements.hdf5`."
+    "This notebook documents the data aquisistion. Results are gathered in `raw_measurements.hdf5`."
    ]
   },
   {
@@ -57,7 +57,7 @@
     "sigs = make_signals()\n",
     "\n",
     "measurement_folder = Path(\"../data\")\n",
-    "db_measurements_path = measurement_folder / \"measurements.hdf5\"\n",
+    "db_measurements_path = measurement_folder / \"raw_measurements.hdf5\"\n",
     "db_excitation_path = measurement_folder / \"excitations.hdf5\"\n",
     "\n",
     "# start fresh\n",
