--- a/notebooks/01_preprocessing.ipynb
+++ b/notebooks/01_preprocessing.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Raw measurements are not included due to their large size!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -10,7 +17,7 @@
     "import numpy as np\n",
     "import h5py\n",
     "\n",
-    "measurements_path = Path(\"../data/measurements.hdf5\")\n",
+    "measurements_path = Path(\"../data/raw_measurements.hdf5\")\n",
     "processed_path = Path(\"../data/processed.hdf5\")\n",
     "\n",
     "dset_opt = dict(dtype=np.float32, compression='gzip')\n",
