small fixes for smooth running

--- a/notebooks/04_analysis.ipynb
+++ b/notebooks/04_analysis.ipynb
@@ -17,7 +17,7 @@
     "sys.path.insert(0, os.path.abspath(os.path.dirname(os.getcwd())))\n",
     "\n",
     "# load predictions from dilled dictionary\n",
-    "db_predictions_path = \"../drafts/data/predictions.dill\"\n",
+    "db_predictions_path = \"data/predictions.dill\"\n",
     "with open(db_predictions_path, 'rb') as f:\n",
     "  datadict = dill.load(f)\n",
     "# dict to DataFrame\n",
@@ -3683,7 +3683,7 @@
     "# axins.set_yticklabels([])\n",
     "\n",
     "# ax.indicate_inset_zoom(axins)\n",
-    "plt.savefig('images/comparison_psd.pdf', bbox_inches=None)\n",
+    "#plt.savefig('images/comparison_psd.pdf', bbox_inches=None)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ierror_mean = (df_onemodel.ei_psd / ivar).mean()\n",
@@ -3697,7 +3697,7 @@
     "ax.set_ylim((-80, -30))\n",
     "ax.set_xlim((5, 15000))\n",
     "\n",
-    "plt.savefig('images/error_psd.pdf', bbox_inches=None)"
+    "#plt.savefig('images/error_psd.pdf', bbox_inches=None)"
    ]
   },
   {
